# telegram-reader

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml
docs/: ROADMAP.md  config.example.yaml  manual-testing.md
src/telegram_reader/: cli.py  config.py  serialize.py  telethon_client.py
src/telegram_reader/commands/: agent.py  auth.py  dialogs.py  messages.py  version.py
tests/: test_agent_help.py  test_peer_parse.py  test_serialize.py  test_version.py
